Fix root cull rect for hit testing under <foreignObject>.

It was incorrectly set to the view rect of the containing LayoutView.
Also fixed a similar accessibility bug along the way.

Bug: 859461

Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I443bb56b2e8fac06a6af2efe4e9d3ec3ff6a9556
Reviewed-on: https://chromium-review.googlesource.com/1125510
Commit-Queue: Chris Harrelson <chrishtr@chromium.org>
Reviewed-by: Fredrik Söderquist <fs@opera.com>
Cr-Commit-Position: refs/heads/master@{#572596}
Former-commit-id: f7c82afda798daf9cb95891a572a931b55460230